--- a/index.html
+++ b/index.html
@@ -57,9 +57,8 @@
 <body>
   <div class="container">
     <div class="image">
-      <img
-        src="YOUR"
-        style="width:100%">
+      <img src="YOUR IMAGE URL"
+       style="width:100%">
     </div>
 
     <div class="image">
