--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <body>
   <div class="container">
     <div class="image">
-      <img src="YOUR IMAGE URL"
+      <img src="./images/pic2.jpg"
        style="width:100%">
     </div>
 
@@ -78,28 +78,28 @@
     <div class="row">
       <div class="column">
         <img class="preview cursor"
-          src="YOUR IMAGE URL"
+          src="./images/pic1.jpg"
           style="width:100%"
           onclick="currentSlide(1)"
           alt="YOUR IMAGE DESCRIPTION">
       </div>
       <div class="column">
         <img class="preview cursor"
-          src="YOUR IMAGE URL"
+          src="./images/pic2.jpg"
           style="width:100%"
           onclick="currentSlide(2)"
           alt="YOUR IMAGE DESCRIPTION">
       </div>
       <div class="column">
         <img class="preview cursor"
-          src="YOUR IMAGE URL"
+          src="./images/pic3.jpg"
           style="width:100%"
           onclick="currentSlide(3)"
           alt="YOUR IMAGE DESCRIPTION">
       </div>
       <div class="column">
         <img class="preview cursor"
-          src="YOUR IMAGE URL"
+          src="./images/pic4.jpg"
           style="width:100%"
           onclick="currentSlide(4)"
           alt="YOUR IMAGE DESCRIPTION">
